refactor: migração completa para Supabase + correções de segurança
BREAKING CHANGES:
- Migrado de Prisma/Auth.js para Supabase ecosystem
- RLS (Row Level Security) implementado em todas tabelas

Security:
- Middleware de proteção de rotas funcionando
- RLS com policies otimizadas (select auth.uid())
- Admin Client para operações privilegiadas
- Callback route para confirmação de email
- Captura de IP para consentimento LGPD

Features:
- Dashboard layout compartilhado
- CRUD pacientes completo com validações
- Schemas Zod centralizados
- Geração de slug único com retry
- Tratamento específico para CRP duplicado

Refactor:
- Componentes movidos para _components/
- DeletePatientButton com confirmação
- Variável NEXT_PUBLIC_APP_URL para deploy
- package.json corrigido (type: module)

Docs:
- README.md profissional
- .env.example com instruções

--- a/package.json
+++ b/package.json
@@ -2,33 +2,29 @@
   "name": "psiconuvem",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "type": "module",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "prepare": "husky",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "docker:up": "docker compose up -d",
-    "docker:down": "docker compose down",
-    "docker:logs": "docker compose logs -f",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:push": "prisma db push"
+    "db:push": "supabase db push",
+    "db:reset": "supabase db reset",
+    "db:migrate": "supabase migration new",
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.0.1",
-    "@prisma/client": "^7.0.1",
-    "bcryptjs": "^3.0.3",
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.86.0",
     "dotenv": "^17.2.3",
+    "lucide-react": "^0.555.0",
     "next": "16.0.6",
-    "next-auth": "^5.0.0-beta.30",
-    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "zod": "^4.1.13"
@@ -36,13 +32,13 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
+    "@eslint/eslintrc": "^3.3.3",
+    "@eslint/js": "^9.39.1",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.19.25",
-    "@types/pg": "^8.15.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^5.1.1",
@@ -55,9 +51,10 @@
     "jsdom": "^27.2.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.7.3",
-    "prisma": "^7.0.1",
+    "supabase": "^2.65.2",
     "tailwindcss": "^4",
     "typescript": "^5",
+    "typescript-eslint": "^8.48.1",
     "vitest": "^4.0.14"
   },
   "lint-staged": {
