--- a/.gitignore
+++ b/.gitignore
@@ -60,5 +60,5 @@ pgadmin_data
 
 # Documentação local (não versionar)
 codigo-fonte.md
-/docs-referencia/*
+# /docs-referencia/*
 /generate-codigo-fonte.sh
